feat: adding new route for reconcile holding
